# python-datamuse

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-devel.txt  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml  python-testing.yml
datamuse/: __init__.py  datamuse.py  scripts.py  test_api.py  test_scripts.py
tests/datamuse/: test_api.py
tests/datamuse/fixtures/: orange.json  por.json  ringing.json
