[tool.poetry]
name = "datamuse"
version = "1.3.2"
description = "Python wrapper for the Datamuse API"
authors = [
    "Guthrie McAfee Armstrong <git@gmarmstrong.dev>",
    "Margaret Sy",
]
license = "MIT"
maintainers = [
    "Guthrie McAfee Armstrong <git@gmarmstrong.dev>",
]
readme = "README.md"
repository = "https://github.com/gmarmstrong/python-datamuse"
keywords = ["datamuse", "linguistics", "language", "wrapper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
responses = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
