[tool.poetry]
name = "python-datamuse"
version = "2.0.1"
description = "Python wrapper for the Datamuse API"
authors = [
    "Guthrie McAfee Armstrong <git@gmarmstrong.dev>",
    "Margaret Sy",
]
license = "MIT"
maintainers = [
    "Guthrie McAfee Armstrong <git@gmarmstrong.dev>",
]
readme = "README.md"
repository = "https://github.com/gmarmstrong/python-datamuse"
keywords = ["datamuse", "linguistics", "language", "wrapper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
]
packages = [
    {include = "datamuse"}
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
responses = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
